...
            "state" : "translated",
            "value" : "Excluir"
          }
        }
      }
    },
    "Delete Account" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Excluir conta"
          }
...
            "state" : "translated",
            "value" : "Falha ao salvar o horário de funcionamento. Por favor, tente novamente."
          }
        }
      }
    },
    "Retry" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reintentar"
          }
...
            "state" : "translated",
            "value" : "Integração com Jobber e Google Agenda"
          }
        }
      }
    },
    "Kevin" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kevin"
          }
...
            "state" : "translated",
            "value" : "Parar de encaminhar chamadas para o Kevin"
          }
        }
      }
    },
    "Subscribe" : {
      "comment" : "A button label that allows a user to subscribe to the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suscribirse"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Assinar"
          }
        }
      }
    },
    "Subscribe — %@/mo" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Versão"
          }
        }
      }
    },
    "View Plans" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ver planos"
          }
...
            "state" : "translated",
            "value" : "Detalhes da chamada indisponíveis"
          }
        }
      }
    },
    "Calls" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Llamadas"
          }
...
            "state" : "translated",
            "value" : "Conectando…"
          }
        }
      }
    },
    "Failed to refresh calls." : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No se pudieron actualizar las llamadas."
          }
...
            "state" : "translated",
            "value" : "Nenhuma conta encontrada correspondente a este ID Apple."
          }
        }
      }
    },
    "Kevin ainda não está disponível no Brasil. Estamos preparando o serviço." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kevin is not yet available in Brazil. We are preparing the service."
          }
...
